fix header on mobile

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -143,7 +143,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .header {
+  .headerHome {
     position: fixed;
     width: 100%;
   }
